--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 
 body{
-background: url(http://www.foodwise.com.au/wp-content/uploads/2012/08/Background_ChoppingBoard21.jpg);
+	background-image: url("/loginback.jpg");
+/*background: url(http://www.foodwise.com.au/wp-content/uploads/2012/08/Background_ChoppingBoard21.jpg);*/
 }
 th{
 	text-align: center;
@@ -16,14 +17,26 @@ th{
 	width: 50px;
 }
 #overflow{
-	    max-height: 570px;
+	max-height: 570px;
     overflow: auto;
 }
-#h1, #h2, #h3{
+#h1{
+	font-size: 30px;
+	margin-top: 0px;
+	color: black; ;
+	font-family: 'Shadows Into Light', cursive;
+}
+#h2{
 	font-size: 30px;
 	margin-top: 20px;
 	color: black; ;
-font-family: 'Shadows Into Light', cursive;
+	font-family: 'Shadows Into Light', cursive;
+}
+#h3{
+	font-size: 30px;
+	margin-top: 20px;
+	color: white; ;
+	font-family: 'Shadows Into Light', cursive;
 }
 
 .btn-floating{
@@ -49,7 +62,8 @@ img{
 	width:300px ;
 }
 #bar, .card-action{
-		background-color: #B7C68B;
+	background-color: #F4F0CB;
+		/*background-color: #B7C68B;*/
 
 }
 .card,{
@@ -120,4 +134,24 @@ margin-left: -20px;
 	width: 350px;
 	margin:0px;
 }
+}
+#logout{
+	float: right;
+	margin-top: 1%;
+	margin-right: 1%;
+}
+#saveRec {
+	margin-bottom: 5px;
+	margin-right: 10px;
+	font-size: 20px;
+	font-family: 'Kaushan Script', cursive;
+	color:green;
+	float: right;
+}
+.card-title{
+	font-size: 18px !important;
+}
+
+.btn{
+	font-size: 12px;
 }
