--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,15 +15,16 @@
 <body>
     <!-- Dropdown Structure -->
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="https://www.linkedin.com/in/patrick-o-hara-8b959b136/">Patrick</a></li>
-        <li><a href="https://www.facebook.com/elias.p.benson">Eli</a></li>
+        <!-- <li><a href="https://www.linkedin.com/in/patrick-o-hara-8b959b136/">Patrick</a></li>
+        <li><a href="https://www.facebook.com/elias.p.benson">Eli</a></li> -->
         <li><a href="https://github.com/BigFos">Steven</a></li>
-        <li><a href="https://www.linkedin.com/in/michael-tolmie-83527537/">Michael</a></li>
+        <!-- <li><a href="https://www.linkedin.com/in/michael-tolmie-83527537/">Michael</a></li> -->
     </ul>
     <nav>
         <div class="nav-wrapper">
             <div id="logo">Pantry Chef <img id="chef" src="/cheficon.png">
-            <a id="logout" href="/logout" class="btn btn-default btn-sm">Logout</a>
+                <div id="logoutbutton"></div>
+                <!-- <a id="logout" href="/logout" class="btn btn-default btn-sm">Logout</a> -->
                 <ul class="right hide-on-down">
                     <!-- Dropdown Trigger -->
                     <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons left">perm_identity</i></a></li>
@@ -63,7 +64,7 @@
                                 </div>
                                 <div>
                                     <!-- <center> <a id="resetButton" href="#">New Search</a></center> -->
-                                    <p><a href="/map.html" target="_blank" class="btn-floating btn-small waves-effect waves-light green tooltipped" data-position="left" data-delay="50" data-tooltip="Grocery Stores Nearby!"><i class="material-icons">location_on</i></a><a id="resetButton" class="btn-floating btn-small waves-effect waves-light green tooltipped" data-position="right" data-delay="50" data-tooltip="Clear Search""><i class="material-icons">replay</i></a></p>
+                                    <p><a href="/map.html" target="_blank" class="btn-floating btn-small waves-effect waves-light green tooltipped" data-position="left" data-delay="50" data-tooltip="Grocery Stores Nearby!"><i class="material-icons">location_on</i></a><a id="resetButton" class="btn-floating btn-small waves-effect waves-light green tooltipped" data-position="right" data-delay="50" data-tooltip="Clear Search" "><i class="material-icons ">replay</i></a></p>
                                 </div>
                             </div>
                         </div>
@@ -71,19 +72,19 @@
                 </div>
                 <!-- Grey navigation panel -->
             </div>
-            <div id="recipeColumn" class="col s12 m9 l9">
-                <div id="h3">Recipes</div>
-                <div id="recipeCards">
+            <div id="recipeColumn " class="col s12 m9 l9 ">
+                <div id="h3 ">Recipes</div>
+                <div id="recipeCards ">
                 </div>
                 <!-- Teal page content  -->
             </div>
         </div>
     </div>
     <!-- FireBase and Script Start -->
-    <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-    <script type="text/javascript" src="/javascript/app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js "></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js "></script>
+    <script type="text/javascript " src="/javascript/app.js "></script>
 </body>
 
 </html>
