--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -23,8 +23,8 @@
     <nav>
         <div class="nav-wrapper">
             <div id="logo">Pantry Chef <img id="chef" src="/cheficon.png">
-                <div id="logoutbutton"></div>
-                <!-- <a id="logout" href="/logout" class="btn btn-default btn-sm">Logout</a> -->
+                <!-- <div id="logoutbutton"></div> -->
+                <a id="logout" href="/logout" class="btn btn-default btn-sm">Logout</a>
                 <ul class="right hide-on-down">
                     <!-- Dropdown Trigger -->
                     <li><a class="dropdown-button" href="#" data-activates="dropdown1"><i class="material-icons left">perm_identity</i></a></li>
@@ -84,7 +84,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js "></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js "></script>
-    <script type="text/javascript " src="/javascript/app.js "></script>
+    <script type="text/javascript " src="/javascript/app.js"></script>
 </body>
 
 </html>
